test/e2e/testdata/tlsroute-to-backend-fqdn.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tlsroute-to-backend-fqdn
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
    sectionName: tls
  hostnames:
  - "example.com"
  rules:
  - backendRefs:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: backend-fqdn
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: Backend
metadata:
  name: backend-fqdn
  namespace: gateway-conformance-infra
spec:
  endpoints:
  - fqdn:
      hostname: tls-backend-2.gateway-conformance-infra.svc.cluster.local
      port: 443
